--- a/tools/BUILD
+++ b/tools/BUILD
@@ -20,8 +20,10 @@ compilation_database(
         "//test/fuzz:fuzz_doc_symbols",
         "//test/fuzz:fuzz_dash_e",
         "//test/fuzz:fuzz_dash_e_impl",
-        "//test:test_corpus_runner",
         "//test:print_document_symbols",
+        "//test:pipeline_test_runner",
+        "//test:parser_test_runner",
+        "//test:lsp_test_runner",
         "//test:hello-test",
         "//test:error-check-test",
         "//test:backtrace-test-raise",
