--- a/common/kvstore/BUILD
+++ b/common/kvstore/BUILD
@@ -32,7 +32,6 @@ cc_test(
     srcs = glob([
         "test/*.cc",
     ]),
-    copts = ["-Iexternal/gtest/include"],
     linkstatic = select({
         "//tools/config:linkshared": 0,
         "//conditions:default": 1,
@@ -40,7 +39,7 @@ cc_test(
     visibility = ["//tools:__pkg__"],
     deps = [
         "kvstore",
-        "@com_google_googletest//:gtest",
-        "@com_google_googletest//:gtest_main",
+        "@doctest",
+        "@doctest//:doctest_main",
     ],
 )
