--- a/infer/BUILD
+++ b/infer/BUILD
@@ -31,7 +31,6 @@ cc_test(
     srcs = glob([
         "test/*.cc",
     ]),
-    copts = ["-Iexternal/gtest/include"],
     linkstatic = select({
         "//tools/config:linkshared": 0,
         "//conditions:default": 1,
@@ -46,7 +45,7 @@ cc_test(
         "//namer",
         "//resolver",
         "//rewriter",
-        "@com_google_googletest//:gtest",
-        "@com_google_googletest//:gtest_main",
+        "@doctest",
+        "@doctest//:doctest_main",
     ],
 )
