--- a/main/lsp/BUILD
+++ b/main/lsp/BUILD
@@ -102,7 +102,6 @@ cc_test(
     name = "error_reporter_test",
     size = "small",
     srcs = ["test/error_reporter_test.cc"],
-    copts = ["-Iexternal/gtest/include"],
     linkstatic = select({
         "//tools/config:linkshared": 0,
         "//conditions:default": 1,
@@ -112,8 +111,8 @@ cc_test(
         "lsp",
         "//payload",
         "//test/helpers",
-        "@com_google_googletest//:gtest",
-        "@com_google_googletest//:gtest_main",
+        "@doctest",
+        "@doctest//:doctest_main",
     ],
 )
 
@@ -121,7 +120,6 @@ cc_test(
     name = "generate_lsp_messages_test",
     size = "small",
     srcs = ["test/generate_lsp_messages_test.cc"],
-    copts = ["-Iexternal/gtest/include"],
     linkstatic = select({
         "//tools/config:linkshared": 0,
         "//conditions:default": 1,
@@ -131,8 +129,8 @@ cc_test(
         "lsp",
         "//payload",
         "//test/helpers",
-        "@com_google_googletest//:gtest",
-        "@com_google_googletest//:gtest_main",
+        "@doctest",
+        "@doctest//:doctest_main",
     ],
 )
 
@@ -140,7 +138,6 @@ cc_test(
     name = "lsp_file_updates_test",
     size = "small",
     srcs = ["test/lsp_file_updates_test.cc"],
-    copts = ["-Iexternal/gtest/include"],
     linkstatic = select({
         "//tools/config:linkshared": 0,
         "//conditions:default": 1,
@@ -150,8 +147,8 @@ cc_test(
         "lsp",
         "//payload",
         "//test/helpers",
-        "@com_google_googletest//:gtest",
-        "@com_google_googletest//:gtest_main",
+        "@doctest",
+        "@doctest//:doctest_main",
     ],
 )
 
@@ -159,7 +156,6 @@ cc_test(
     name = "lsp_preprocessor_test",
     size = "small",
     srcs = ["test/lsp_preprocessor_test.cc"],
-    copts = ["-Iexternal/gtest/include"],
     linkstatic = select({
         "//tools/config:linkshared": 0,
         "//conditions:default": 1,
@@ -169,8 +165,8 @@ cc_test(
         "lsp",
         "//payload",
         "//test/helpers",
-        "@com_google_googletest//:gtest",
-        "@com_google_googletest//:gtest_main",
+        "@doctest",
+        "@doctest//:doctest_main",
     ],
 )
 
@@ -178,7 +174,6 @@ cc_test(
     name = "lsp_test",
     size = "small",
     srcs = ["test/lsp_test.cc"],
-    copts = ["-Iexternal/gtest/include"],
     linkstatic = select({
         "//tools/config:linkshared": 0,
         "//conditions:default": 1,
@@ -188,7 +183,7 @@ cc_test(
         "lsp",
         "//payload",
         "//test/helpers",
-        "@com_google_googletest//:gtest",
-        "@com_google_googletest//:gtest_main",
+        "@doctest",
+        "@doctest//:doctest_main",
     ],
 )
