--- a/test/lsp/BUILD
+++ b/test/lsp/BUILD
@@ -14,7 +14,6 @@ cc_test(
         "ProtocolTest.h",
         "protocol_test_corpus.cc",
     ],
-    copts = ["-Iexternal/gtest/include"],
     linkstatic = select({
         "//tools/config:linkshared": 0,
         "//conditions:default": 1,
@@ -25,8 +24,8 @@ cc_test(
         "//main/lsp",
         "//payload",
         "//test/helpers",
-        "@com_google_googletest//:gtest",
-        "@com_google_googletest//:gtest_main",
+        "@doctest",
+        "@doctest//:doctest_main",
     ],
 )
 
@@ -38,7 +37,6 @@ cc_test(
         "ProtocolTest.h",
         "cache_protocol_test_corpus.cc",
     ],
-    copts = ["-Iexternal/gtest/include"],
     linkstatic = select({
         "//tools/config:linkshared": 0,
         "//conditions:default": 1,
@@ -49,8 +47,8 @@ cc_test(
         "//main/lsp",
         "//payload",
         "//test/helpers",
-        "@com_google_googletest//:gtest",
-        "@com_google_googletest//:gtest_main",
+        "@doctest",
+        "@doctest//:doctest_main",
     ],
 )
 
@@ -62,7 +60,6 @@ cc_test(
         "ProtocolTest.h",
         "multithreaded_protocol_test_corpus.cc",
     ],
-    copts = ["-Iexternal/gtest/include"],
     linkstatic = select({
         "//tools/config:linkshared": 0,
         "//conditions:default": 1,
@@ -73,8 +70,8 @@ cc_test(
         "//main/lsp",
         "//payload",
         "//test/helpers",
-        "@com_google_googletest//:gtest",
-        "@com_google_googletest//:gtest_main",
+        "@doctest",
+        "@doctest//:doctest_main",
     ],
 )
 
@@ -86,7 +83,6 @@ cc_test(
         "ProtocolTest.h",
         "watchman_test_corpus.cc",
     ],
-    copts = ["-Iexternal/gtest/include"],
     linkstatic = select({
         "//tools/config:linkshared": 0,
         "//conditions:default": 1,
@@ -97,8 +93,8 @@ cc_test(
         "//main/lsp",
         "//payload",
         "//test/helpers",
-        "@com_google_googletest//:gtest",
-        "@com_google_googletest//:gtest_main",
+        "@doctest",
+        "@doctest//:doctest_main",
     ],
 )
 
