WIP: Packaging code for rigorous packages.
Added one simple passing test.

--- a/main/pipeline/BUILD
+++ b/main/pipeline/BUILD
@@ -32,6 +32,7 @@ cc_library(
         "//namer",
         "//namer/configatron",
         "//parser",
+        "//packager",
         "//payload/binary",
         "//payload/text",
         "//plugin",
