--- a/main/lsp/BUILD
+++ b/main/lsp/BUILD
@@ -27,6 +27,7 @@ cc_library(
         "LSPTypecheckerCoordinator.h",
         "UndoState.h",
         "ErrorReporter.h",
+        "ErrorFlusherLSP.h"
     ],
     hdrs = [
         "LSPConfiguration.h",
