Handle autocorrects in fast path
- Add AutocorrectFlusher class
- Pass flusher to runFastPath
- Change runFastPath to return vector of filerefs
- Remove TypecheckRun class

--- a/main/lsp/BUILD
+++ b/main/lsp/BUILD
@@ -28,6 +28,7 @@ cc_library(
         "UndoState.h",
         "ErrorReporter.h",
         "ErrorFlusherLSP.h",
+        "AutocorrectFlusher.h",
     ],
     hdrs = [
         "LSPConfiguration.h",
