Implement message pack version of all binary output formats

--- a/main/pipeline/BUILD
+++ b/main/pipeline/BUILD
@@ -20,6 +20,7 @@ cc_library(
         "//class_flatten",
         "//common/concurrency",
         "//common/crypto_hashing",
+        "//common/json2msgpack",
         "//common/kvstore",
         "//core",
         "//core/proto",
