Stripe packages support (with --stripe-packages) (#3158)
Introduces a new typechecking pass called packager that rewrites Stripe __package.rb files and files within those packages such that Sorbet can typecheck them. The pass activates if the user passes --stripe-packages to Sorbet.

The pass is purely syntactic in nature. It comes after caching and before namer so that package changes do not invalidate the cache.

In order to support testing packages (which uses file system paths to dictate package membership), I've made the test/testdata/packager directory special. Each subdirectory of that directory is a single test.

See comment in packager/packager.h for high level details about what the transformation looks like.

LSP support/testing is not part of this PR. While LSP is validated to work with --stripe-packages on the existing tests, LSP features like hover/go to def/etc will be tested (and potentially bugfixed) in a subsequent PR.

--- a/main/pipeline/BUILD
+++ b/main/pipeline/BUILD
@@ -31,6 +31,7 @@ cc_library(
         "//main/options",
         "//namer",
         "//namer/configatron",
+        "//packager",
         "//parser",
         "//payload/binary",
         "//payload/text",
