--- a/tools/BUILD
+++ b/tools/BUILD
@@ -67,6 +67,7 @@ compilation_database(
         "//plugin:plugin",
         "//payload/text:text",
         "//payload/binary:binary",
+        "//packager:packager",
         "//namer/configatron:configatron",
         "//namer:namer",
         "//local_vars:local_vars",
