Mark "test/testdata/**/*.llo.exp" generated (#197)
This collapses them by default in diffs.

--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,6 @@
 test/**/*.out diff
 *.llo.exp linguist-language=LLVM
 *.ll.exp linguist-language=LLVM
+
+test/testdata/**/*.llo.exp linguist-generated
+test/testdata/**/*.ll.exp linguist-generated
