--- a/gems/sorbet-runtime/.rubocop.yml
+++ b/gems/sorbet-runtime/.rubocop.yml
@@ -35,3 +35,9 @@ Naming/FileName:
   Exclude:
     # Filename deliberately matches gem name
     - 'lib/sorbet-runtime.rb'
+
+Lint/MissingSuper:
+  Exclude:
+    # Don't force type definitions to call `super` in initialize
+    - 'lib/types/types/**'
+    - 'lib/types/private/types/**'
