rubocop_todo: Lint/UselessMethodDefinition

--- a/gems/sorbet-runtime/.rubocop.yml
+++ b/gems/sorbet-runtime/.rubocop.yml
@@ -31,6 +31,10 @@ Style/TrivialAccessors:
 Lint/UnusedMethodArgument:
   Enabled: false
 
+# Prone to false positives when we care about which class owns a method
+Lint/UselessMethodDefinition:
+  Enabled: false
+
 Naming/FileName:
   Exclude:
     # Filename deliberately matches gem name
