--- a/gems/sorbet-runtime/Rakefile
+++ b/gems/sorbet-runtime/Rakefile
@@ -9,7 +9,7 @@ T::Configuration.default_checked_level = :always
 task default: [:test, :rubocop]
 
 task :test do
-  Dir.glob('./test/**/*.rb').reject {|path| path.match(/^.\/test\/types\/fixtures\//)}.each(&method(:require))
+  Dir.glob('./test/**/*.rb').reject {|path| path.match(%r{^./test/types/fixtures/})}.each(&method(:require))
 end
 
 require 'rubocop/rake_task'
