Fix easy Lint and Performance Rubocop TODOs (#3433)
* rubocop_todo: Lint/BinaryOperatorWithIdenticalOperands

* rubocop_todo: Lint/BooleanSymbol

* rubocop_todo: Lint/MissingSuper

* rubocop_todo: Lint/SafeNavigationChain

* rubocop_todo: Lint/UnusedBlockArgument

* rubocop_todo: Lint/UselessAssignment

* rubocop_todo: Lint/UselessMethodDefinition

* rubocop_todo: Performance/CollectionLiteralInLoop

* rubocop_todo: Performance/RegexpMatch

* rubocop_todo: Performance/StringInclude

--- a/gems/sorbet-runtime/.rubocop.yml
+++ b/gems/sorbet-runtime/.rubocop.yml
@@ -31,7 +31,22 @@ Style/TrivialAccessors:
 Lint/UnusedMethodArgument:
   Enabled: false
 
+# Prone to false positives when we care about which class owns a method
+Lint/UselessMethodDefinition:
+  Enabled: false
+
 Naming/FileName:
   Exclude:
     # Filename deliberately matches gem name
     - 'lib/sorbet-runtime.rb'
+
+Lint/MissingSuper:
+  Exclude:
+    # Don't force type definitions to call `super` in initialize
+    - 'lib/types/types/**/*'
+    - 'lib/types/private/types/**/*'
+
+Performance/CollectionLiteralInLoop:
+  Exclude:
+    # Ok to prioritize brevity over perf in tests
+    - 'test/**/*'
