--- a/experimental/rubyfmt_c_main/BUILD
+++ b/experimental/rubyfmt_c_main/BUILD
@@ -10,6 +10,7 @@ cc_binary(
             "-lcrypt",
             "-lrt",
             "-lz",
+            "-lgmp",
         ],
     }),
     visibility = ["//visibility:public"],
