Replace sorted vectors in CFG with a bitfield-like set.
Stores set membership in a vector of u4s where each bit represents an item's membership.
Enables fast and efficient iteration, set intersection, set union, and set difference.

--- a/common/BUILD
+++ b/common/BUILD
@@ -20,6 +20,8 @@ cc_library(
         "FileSystem.h",
         "JSON.h",
         "Levenstein.h",
+        "UIntSet.h",
+        "UIntSetForEach.h",
         "common.h",
         "typecase.h",
     ],
