Implement document formatting and exclude Rubyfmt from emscripten builds.

--- a/main/lsp/BUILD
+++ b/main/lsp/BUILD
@@ -53,6 +53,7 @@ cc_library(
         "//core",
         "//core/proto",
         "//core/serialize",
+        "//experimental/rubyfmt",
         "//main/cache",
         "//main/options",
         "//main/pipeline",
