--- a/tools/BUILD
+++ b/tools/BUILD
@@ -53,13 +53,14 @@ compilation_database(
         "//main/pipeline:pipeline-orig",
         "//main/cache:cache-orig",
         "//infer:infer_test",
-        "//experimental/rubyfmt_c_main:main",
+        "//experimental/rubyfmt:rubyfmt_test",
         "//emscripten:main",
         "//payload/text:empty",
         "//payload/binary:some",
         "//main/pipeline/semantic_extension:none",
         "//main:realmain",
         "//main/lsp:lsp",
+        "//experimental/rubyfmt:rubyfmt",
         "//main/cache:cache",
         "//payload:interface",
         "//main/pipeline:pipeline",
