Revert "Support experimental document formatting in-editor with Rubyfmt (#3551)"
This reverts commit 347f09a652ebc1875cebce59640a840545a9a121.

--- a/tools/BUILD
+++ b/tools/BUILD
@@ -53,14 +53,13 @@ compilation_database(
         "//main/pipeline:pipeline-orig",
         "//main/cache:cache-orig",
         "//infer:infer_test",
-        "//experimental/rubyfmt:rubyfmt_test",
+        "//experimental/rubyfmt_c_main:main",
         "//emscripten:main",
         "//payload/text:empty",
         "//payload/binary:some",
         "//main/pipeline/semantic_extension:none",
         "//main:realmain",
         "//main/lsp:lsp",
-        "//experimental/rubyfmt:rubyfmt",
         "//main/cache:cache",
         "//payload:interface",
         "//main/pipeline:pipeline",
