--- a/main/lsp/BUILD
+++ b/main/lsp/BUILD
@@ -44,8 +44,8 @@ cc_library(
     # webasm has no options specified since it links against a no-op rubyfmt
     linkopts = select({
         "@com_stripe_ruby_typer//tools/config:darwin": ["-framework Foundation"],
-        "//tools/config:webasm": [],
-        "//conditions:default": [
+        "//conditions:default": [],
+        "//experimental/rubyfmt:enable_rubyfmt": [
             "-lcrypt",
             "-lrt",
             "-lz",
