--- a/.bazelrc
+++ b/.bazelrc
@@ -118,7 +118,7 @@ build:reduce-intermediate-file-size-base --strip=always
 build:reduce-intermediate-file-size-base --copt=-fno-standalone-debug --linkopt=-fno-standalone-debug # used by buildfarm to have less debug information on disk
 
 # extend reduce-intermediate-file-size with -Os
-build:buildfarm --copt=-Os --linkopt=-Os --config=reduce-intermediate-file-size-base
+build:buildfarm --copt=-Os --linkopt=-Os --config=reduce-intermediate-file-size-base --config=rubyfmt
 test:buildfarm --test_output=errors
 
 build:buildfarm-sanitized-linux --config=test-sanitized-linux --config=buildfarm
