--- a/.bazelrc
+++ b/.bazelrc
@@ -117,6 +117,9 @@ build:reduce-intermediate-file-size-base --copt=-g0 --linkopt=-g0 # used by buil
 build:reduce-intermediate-file-size-base --strip=always
 build:reduce-intermediate-file-size-base --copt=-fno-standalone-debug --linkopt=-fno-standalone-debug # used by buildfarm to have less debug information on disk
 
+# integrates rubyfmt into sorbet
+build:rubyfmt --define rubyfmt=true --copt=-DRUBYFMT_ENABLED
+
 # extend reduce-intermediate-file-size with -Os
 build:buildfarm --copt=-Os --linkopt=-Os --config=reduce-intermediate-file-size-base --config=rubyfmt
 test:buildfarm --test_output=errors
@@ -143,8 +146,6 @@ build:forcedebug --copt=-DFORCE_DEBUG
 # a way to skip slow debug checks (for example, when compiling debug release
 # builds)
 build:skipslowenforce --copt=-DSKIP_SLOW_ENFORCE
-
-build:rubyfmt --define rubyfmt=true --copt=-DRUBYFMT_ENABLED
 
 # LTO build. Much longer compilation time. Smaller size and better perf.
 build:lto --copt=-flto=thin
