--- a/.bazelrc
+++ b/.bazelrc
@@ -117,8 +117,11 @@ build:reduce-intermediate-file-size-base --copt=-g0 --linkopt=-g0 # used by buil
 build:reduce-intermediate-file-size-base --strip=always
 build:reduce-intermediate-file-size-base --copt=-fno-standalone-debug --linkopt=-fno-standalone-debug # used by buildfarm to have less debug information on disk
 
+# integrates rubyfmt into sorbet
+build:rubyfmt --define rubyfmt=true --copt=-DRUBYFMT_ENABLED
+
 # extend reduce-intermediate-file-size with -Os
-build:buildfarm --copt=-Os --linkopt=-Os --config=reduce-intermediate-file-size-base
+build:buildfarm --copt=-Os --linkopt=-Os --config=reduce-intermediate-file-size-base --config=rubyfmt
 test:buildfarm --test_output=errors
 
 build:buildfarm-sanitized-linux --config=test-sanitized-linux --config=buildfarm
