--- a/.buildkite/pipeline.yaml
+++ b/.buildkite/pipeline.yaml
@@ -26,6 +26,7 @@ steps:
 
   - label: ":mac: test-static-sanitized.sh (master only)"
     command: .buildkite/test-static-sanitized.sh
+    branches: "master"
     artifact_paths: _out_/profile.json
     agents:
       os: mac
