--- a/.bazelrc
+++ b/.bazelrc
@@ -121,6 +121,9 @@ build:reduce-intermediate-file-size-base --config=shared-libs
 # extend reduce-intermediate-file-size with -Os
 build:reduce-intermediate-file-size --copt=-Os --linkopt=-Os --config=reduce-intermediate-file-size-base
 
+# integrates rubyfmt into sorbet
+build:rubyfmt --define rubyfmt=true --copt=-DRUBYFMT_ENABLED
+
 build:buildfarm --config=reduce-intermediate-file-size
 test:buildfarm --test_output=errors
 build:buildfarm-sanitized-linux --config=test-sanitized-linux --config=buildfarm
