Re-parse packages in autogen and use those as autoloader input

--- a/main/autogen/BUILD
+++ b/main/autogen/BUILD
@@ -3,11 +3,13 @@ cc_library(
     srcs = [
         "autogen.cc",
         "autoloader.cc",
+        "packages.cc",
         "subclasses.cc",
     ],
     hdrs = [
         "autogen.h",
         "autoloader.h",
+        "packages.h",
         "subclasses.h",
     ],
     linkstatic = select({
