--- a/gems/sorbet-runtime/.rubocop.yml
+++ b/gems/sorbet-runtime/.rubocop.yml
@@ -54,3 +54,7 @@ Performance/CollectionLiteralInLoop:
   Exclude:
     # Ok to prioritize brevity over perf in tests
     - 'test/**/*'
+
+# We frequently care about the exact type of values, not just truthiness
+Style/DoubleNegation:
+  Enabled: false
