Fix many Style rubocop_todos (#3720)
* rubocop_todo: Style/TrailingCommaInHashLiteral

* rubocop_todo: Style/SafeNavigation

* rubocop_todo: Style/RegexpLiteral

* rubocop_todo: Style/RedundantFileExtensionInRequire

* rubocop_todo: Style/RedundantParentheses

* rubocop_todo: Style/RedundantReturn

* rubocop_todo: Style/Proc

* rubocop_todo: Style/MultipleComparison

* rubocop_todo: Style/LineEndConcatenation

* rubocop_todo: Style/InverseMethods

* rubocop_todo: Style/HashTransformValues

* rubocop_todo: Style/HashSyntax

* rubocop_todo: Style/HashEachMethods

* rubocop_todo: Style/EvenOdd

* rubocop_todo: Style/EmptyMethod

* rubocop_todo: Style/ClassVars

* rubocop_todo: Style/ArrayCoercion

* rubocop_todo: Style/IfInsideElse

* rubocop_todo: Style/NonNilCheck

* rubocop_todo: Style/MethodCallWithoutArgsParentheses

* rubocop_todo: Style/StringConcatenation

* rubocop_todo: Style/ZeroLengthPredicate

* Additional rubocop corrections after rebase

* rubocop_todo: Performance/TimesMap

* .rubocop_todo: Style/DoubleNegation

* rubocop_todo: Style/EmptyElse

* rubocop_todo: Style/KeywordParametersOrder

* rubocop_todo: Style/SoleNestedConditional

* rubocop_todo: Style/YodaCondition

* rubocop_todo: Style/TrailingUnderscoreVariable

* rubocop_todo: Style/SlicingWithRange

* rubocop_todo: Style/WordArray

* rubocop_todo: Style/SymbolArray

* rubocop_todo: Style/IdenticalConditionalBranches

* rubocop_todo: Style/OptionalBooleanParameter

* rubocop_todo: Style/PercentLiteralDelimiters

* rubocop_todo: Style/MutableConstant

* rubocop_todo: Style/ConditionalAssignment

* fix types

--- a/gems/sorbet-runtime/.rubocop.yml
+++ b/gems/sorbet-runtime/.rubocop.yml
@@ -26,6 +26,8 @@ Style/TrailingCommaInArrayLiteral:
   EnforcedStyleForMultiline: comma
 Style/TrivialAccessors:
   IgnoreClassMethods: true
+Style/EmptyElse:
+  EnforcedStyle: empty
 
 # This doesn't play very well with implementations of Sorbet abstract methods
 Lint/UnusedMethodArgument:
@@ -33,6 +35,10 @@ Lint/UnusedMethodArgument:
 
 # Prone to false positives when we care about which class owns a method
 Lint/UselessMethodDefinition:
+  Enabled: false
+
+# This can be bad for performance
+Style/MultipleComparison:
   Enabled: false
 
 Naming/FileName:
@@ -50,3 +56,11 @@ Performance/CollectionLiteralInLoop:
   Exclude:
     # Ok to prioritize brevity over perf in tests
     - 'test/**/*'
+
+# We frequently care about the exact type of values, not just truthiness
+Style/DoubleNegation:
+  Enabled: false
+
+# We don't want to needlessly break older Rubies
+Style/SlicingWithRange:
+  Enabled: false
