--- a/gems/sorbet-runtime/Rakefile
+++ b/gems/sorbet-runtime/Rakefile
@@ -6,10 +6,10 @@
 require "./lib/sorbet-runtime"
 T::Configuration.default_checked_level = :always
 
-task default: [:test, :rubocop]
+task default: %i[test rubocop]
 
 task :test do
-  Dir.glob('./test/**/*.rb').reject {|path| path.match(/^.\/test\/types\/fixtures\//)}.each(&method(:require))
+  Dir.glob('./test/**/*.rb').reject {|path| path.match(%r{^./test/types/fixtures/})}.each(&method(:require))
 end
 
 require 'rubocop/rake_task'
@@ -18,7 +18,7 @@ RuboCop::RakeTask.new(:rubocop) do |t|
 end
 
 begin
-  require './bench/tasks.rb'
+  require './bench/tasks'
 rescue LoadError
   # Expected when using packaged gem
 end
